14.5/manifests/pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web1
  name: web1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
        - image: praqma/network-multitool:alpine-extra
          imagePullPolicy: IfNotPresent
          name: multitool-web1
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: web1
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: web1


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web2
  name: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
        - image: praqma/network-multitool:alpine-extra
          imagePullPolicy: IfNotPresent
          name: multitool-web2
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: web2
