14.5/manifests/np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-web
spec:
  podSelector:
    matchLabels:
      app: web2
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: web1
      ports:
      - protocol: TCP
        port: 80
    - to:
        - ipBlock:
            cidr: 169.254.25.10/32
      ports:
        - protocol: UDP
          port: 53
